# docs/swagger.yaml
@@ -1005,6 +1005,30 @@ paths:
       summary: update resource
       tags:
       - resource
+  /api/quick/resources/{resourceId}/json/operations/{operationId}:
+    get:
+      parameters:
+      - description: resource id
+        in: path
+        name: resourceId
+        required: true
+        type: string
+      - description: json path
+        in: query
+        name: path
+        required: true
+        type: string
+      - description: operation id
+        in: path
+        name: operationId
+        required: true
+        type: string
+      responses:
+        "200":
+          description: OK
+      summary: 判断用户当前对JSON资源的操作是否被允许
+      tags:
+      - resource-role-operation
   /api/quick/resources/{resourceId}/json/operations/{operationId}/json:
     get:
       parameters:
